--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -1,50 +1,19 @@
-name: "Code Coverage"
+name: Codecov
 
 on:
     push:
-        branches: master
+        branches: [master]
         paths:
             - ".github/workflows/coverage.yml"
             - "tests/*.py"
     pull_request:
-        branches: master
+        branches: [master]
 
 jobs:
     code-coverage:
-        if: |
-            github.actor != 'dependabot[bot]' &&
-            github.actor != 'github-actions[bot]' &&
-            github.actor != 'protected-auto-commits[bot]'
-        permissions:
-            contents: read
-            pull-requests: write
-        name: Codecov
-        runs-on: ubuntu-latest
-        steps:
-          - name: Checkout Repo
-            uses: actions/checkout@v4
-
-          - name: Setup Python
-            uses: actions/setup-python@v5
-            with:
-                python-version: "3.x"
-                cache: "pip"
-
-          - name: Install Dependencies
-            run: |
-                pip install -r requirements.txt
-
-          - name: Run tests with coverage
-            run: pytest --cov=api --cov-report=xml --cov-report=term-missing
-            env:
-                INPUT_WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
-                GITHUB_REPOSITORY: ${{ github.repository }}
-
-          - name: Upload coverage to Codecov
-            uses: codecov/codecov-action@v5
-            with:
-                token: ${{ secrets.CODECOV_TOKEN }}
-                files: ./coverage.xml
-                flags: unittests
-                name: codecov-umbrella
-                fail_ci_if_error: true
+        uses: Nicconike/Steam-Stats/.github/workflows/coverage.yml@master
+        with:
+            use_playwright: false
+        secrets:
+            CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
+            INPUT_WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
