chore: update coverage workflow paths and remove unused GITHUB_TOKEN from release workflow

--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -6,6 +6,7 @@ on:
         paths:
             - ".github/workflows/coverage.yml"
             - "tests/*.py"
+            - "sonar-project.properties"
     pull_request:
         branches: [master]
 
