ci(fix): add permissions to workflow files and update templates, tests

--- a/.github/workflows/bandit.yml
+++ b/.github/workflows/bandit.yml
@@ -10,6 +10,9 @@ on:
     pull_request:
         branches: [master]
 
+permissions:
+    contents: read
+
 jobs:
     bandit:
         uses: Nicconike/Steam-Stats/.github/workflows/bandit.yml@master
