--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -6,6 +6,9 @@ on:
     pull_request:
         branches: [master]
 
+permissions:
+    contents: read
+
 jobs:
     static-analysis:
         uses: Nicconike/Steam-Stats/.github/workflows/codeql.yml@master
