--- a/.github/workflows/dependency-review.yml
+++ b/.github/workflows/dependency-review.yml
@@ -3,6 +3,9 @@ on:
     pull_request:
         branches: [master]
 
+permissions:
+    contents: read
+
 jobs:
     dependency-review:
         uses: Nicconike/Steam-Stats/.github/workflows/dependency-review.yml@master
