--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -8,17 +8,228 @@ on:
         paths:
             - ".github/workflows/release.yml"
             - "api/*.py"
+            - "templates/*.j2"
             - "pyproject.toml"
             - "Dockerfile"
-            - "requirements.txt"
+
+permissions:
+    contents: read
 
 jobs:
     release:
-        uses: Nicconike/Steam-Stats/.github/workflows/release.yml@master
-        with:
-            repo_name: "Wakatime-Leaderboards"
-            docker_image: "wakatime-leaderboards"
-        secrets:
-            APP_ID: ${{ secrets.GH_APP_ID }}
-            APP_PRIVATE_KEY: ${{ secrets.GH_PRIVATE_KEY }}
-            DOCKER_TOKEN: ${{ secrets.DOCKER_TOKEN }}
+        if: |
+            github.actor != 'dependabot[bot]' &&
+            github.actor != 'github-actions[bot]' &&
+            github.actor != 'protected-auto-commits[bot]'
+        name: Release
+        runs-on: ubuntu-latest
+        concurrency:
+            group: ${{ github.workflow }}-${{ github.ref }}
+            cancel-in-progress: ${{ github.ref != 'refs/heads/master' }}
+        permissions:
+            id-token: write
+            contents: write
+        outputs:
+            released: ${{ steps.semantic.outputs.released }}
+            version: ${{ steps.semantic.outputs.version }}
+            previous_version: ${{ steps.semantic.outputs.previous_version }}
+        steps:
+            - name: Harden the runner
+              uses: step-security/harden-runner@f4a75cfd619ee5ce8d5b864b0d183aff3c69b55a # v2.13.1
+              with:
+                  egress-policy: audit
+
+            - name: GitHub App Token
+              uses: actions/create-github-app-token@67018539274d69449ef7c02e8e71183d1719ab42 # v2.1.4
+              id: app-token
+              with:
+                  app-id: ${{ secrets.APP_ID }}
+                  private-key: ${{ secrets.APP_PRIVATE_KEY }}
+
+            - name: Checkout Code
+              uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5.0.0
+              with:
+                  fetch-depth: 0
+                  token: ${{ steps.app-token.outputs.token }}
+
+            - name: Setup Python
+              uses: actions/setup-python@e797f83bcb11b83ae66e0230d6156d7c80228e7c # v6.0.0
+              with:
+                  python-version: "3.13"
+                  cache: "pip"
+
+            - name: Install Dependencies
+              run: |
+                  pip install python-semantic-release==10.4.1
+
+            - name: Update to Latest Commit
+              run: |
+                  git fetch origin
+                  git reset --hard origin/${{ github.ref_name }}
+
+            - name: Semantic Release
+              id: semantic
+              uses: python-semantic-release/python-semantic-release@4d4cb0ab842247caea1963132c242c62aab1e4d5 # v10.4.1
+              with:
+                  github_token: ${{ steps.app-token.outputs.token }}
+              env:
+                  PYTHON_KEYRING_BACKEND: keyring.backends.null.Keyring
+
+            - name: Publish to GitHub Release Assets
+              uses: python-semantic-release/publish-action@ae6462adc12bd3d1738070d784b65b5189b955a9 # v10.4.1
+              with:
+                  github_token: ${{ steps.app-token.outputs.token }}
+                  tag: ${{ steps.semantic.outputs.tag }}
+
+            - name: Build distribution
+              run: |
+                  pip install build==1.3.0
+                  python -m build
+
+            - name: Publish to PyPI
+              uses: pypa/gh-action-pypi-publish@ed0c53931b1dc9bd32cbe73a98c7f6766f8a527e # v1.13.0
+              with:
+                  packages-dir: dist
+                  print-hash: true
+                  verbose: true
+              continue-on-error: true
+
+    docker:
+        name: Docker
+        runs-on: ubuntu-latest
+        needs: release
+        if: needs.release.outputs.released == 'true'
+        concurrency:
+            group: ${{ github.workflow }}-${{ github.ref }}
+            cancel-in-progress: ${{ github.ref != 'refs/heads/master' }}
+        permissions:
+            contents: read
+            attestations: write
+            id-token: write
+            packages: write
+        steps:
+            - name: Harden the runner
+              uses: step-security/harden-runner@f4a75cfd619ee5ce8d5b864b0d183aff3c69b55a # v2.13.1
+              with:
+                  egress-policy: audit
+
+            - name: GitHub App Token
+              uses: actions/create-github-app-token@67018539274d69449ef7c02e8e71183d1719ab42 # v2.1.4
+              id: app-token
+              with:
+                  app-id: ${{ secrets.APP_ID }}
+                  private-key: ${{ secrets.APP_PRIVATE_KEY }}
+
+            - name: Checkout Code
+              uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5.0.0
+              with:
+                  fetch-depth: 0
+                  token: ${{ steps.app-token.outputs.token }}
+
+            - name: Install CoSign
+              if: github.event_name != 'pull_request'
+              uses: sigstore/cosign-installer@d7543c93d881b35a8faa02e8e3605f69b7a1ce62 # v3.10.0
+              with:
+                  cosign-release: "v2.6.0"
+
+            - name: Setup Docker Buildx
+              uses: docker/setup-buildx-action@e468171a9de216ec08956ac3ada2f0791b6bd435 # v3.11.1
+
+            - name: Login to Docker Hub
+              uses: docker/login-action@5e57cd118135c172c3672efd75eb46360885c0ef # v3.6.0
+              with:
+                  username: ${{ vars.DOCKER_USERNAME }}
+                  password: ${{ secrets.DOCKER_TOKEN }}
+
+            - name: Login to GitHub Container Registry
+              uses: docker/login-action@5e57cd118135c172c3672efd75eb46360885c0ef # v3.6.0
+              with:
+                  registry: ghcr.io
+                  username: ${{ github.actor }}
+                  password: ${{ secrets.GITHUB_TOKEN }}
+
+            - name: Extract Docker Metadata
+              id: meta
+              uses: docker/metadata-action@c1e51972afc2121e065aed6d45c65596fe445f3f # v5.8.0
+              with:
+                  images: |
+                      ${{ vars.DOCKER_USERNAME }}/${{ github.event.repository.name }}
+                      ghcr.io/${{ github.repository_owner }}/${{ github.event.repository.name }}
+                  tags: |
+                      type=raw,value=master
+                      type=raw,value=v${{ needs.release.outputs.version }}
+
+            - name: Build & Push Docker Image
+              uses: docker/build-push-action@263435318d21b8e681c14492fe198d362a7d2c83 # v6.18.0
+              id: push
+              with:
+                  context: .
+                  file: ./Dockerfile
+                  push: true
+                  tags: ${{ steps.meta.outputs.tags }}
+                  labels: ${{ steps.meta.outputs.labels }}
+                  platforms: linux/amd64
+                  cache-from: type=gha
+                  cache-to: type=gha,mode=max
+                  secrets: |
+                      GITHUB_TOKEN=${{ steps.app-token.outputs.token }}
+
+            - name: Sign the published Docker Image
+              if: ${{ github.event_name != 'pull_request' }}
+              env:
+                  TAGS: ${{ steps.meta.outputs.tags }}
+                  DIGEST: ${{ steps.push.outputs.digest }}
+              run: echo "${TAGS}" | xargs -I {} cosign sign --yes {}@${DIGEST}
+
+            - name: Generate Artifact Attestation
+              uses: actions/attest-build-provenance@977bb373ede98d70efdf65b84cb5f73e068dcc2a # v3.0.0
+              with:
+                  subject-name: ghcr.io/${{ github.repository_owner }}/${{ github.event.repository.name }}
+                  subject-digest: ${{ steps.push.outputs.digest }}
+                  push-to-registry: true
+
+            - name: Docker Scout Scan
+              uses: docker/scout-action@f8c776824083494ab0d56b8105ba2ca85c86e4de # v1.18.2
+              with:
+                  command: quickview, cves
+                  image: ${{ vars.DOCKER_USERNAME }}/${{ github.event.repository.name }}:master
+                  write-comment: true
+                  github-token: ${{ secrets.GITHUB_TOKEN }}
+                  sarif-file: docker-scout-results.sarif
+
+            - name: Upload Scout Scan Results
+              if: always()
+              uses: actions/upload-artifact@ea165f8d65b6e75b540449e92b4886f43607fa02 # v4.6.2
+              with:
+                  name: docker-scout-results
+                  path: docker-scout-results.sarif
+
+    cleanup:
+        runs-on: ubuntu-latest
+        name: Cleanup
+        needs: [release, docker]
+        concurrency:
+            group: ${{ github.workflow }}-cleanup
+            cancel-in-progress: false
+        permissions:
+            contents: read
+            packages: write
+        steps:
+            - name: Harden the runner
+              uses: step-security/harden-runner@f4a75cfd619ee5ce8d5b864b0d183aff3c69b55a # v2.13.1
+              with:
+                  egress-policy: audit
+
+            - name: Checkout Code
+              uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5.0.0
+              with:
+                  fetch-depth: 0
+
+            - name: Delete Old GHCR Tags
+              uses: actions/delete-package-versions@e5bc658cc4c965c472efe991f8beea3981499c55 # v5.0.0
+              with:
+                  package-name: "wakatime-leaderboards"
+                  package-type: "container"
+                  min-versions-to-keep: 2
+                  delete-only-untagged-versions: true
+                  token: ${{ secrets.GITHUB_TOKEN }}
