--- a/.github/workflows/wakatime.yml
+++ b/.github/workflows/wakatime.yml
@@ -8,8 +8,11 @@ on:
     push:
         branches: [master]
         paths:
-            - '.github/workflows/wakatime.yml'
-            - 'api/*.py'
+            - ".github/workflows/wakatime.yml"
+            - "api/*.py"
+
+permissions:
+    contents: read
 
 jobs:
     update-readme:
@@ -20,16 +23,16 @@ jobs:
             github.actor != 'protected-auto-commits[bot]'
         runs-on: ubuntu-latest
         steps:
-          - name: GitHub App Token
-            uses: actions/create-github-app-token@v2
-            id: app-token
-            with:
-                app-id: ${{ secrets.GH_APP_ID }}
-                private-key: ${{ secrets.GH_PRIVATE_KEY }}
+            - name: GitHub App Token
+              uses: actions/create-github-app-token@v2
+              id: app-token
+              with:
+                  app-id: ${{ secrets.GH_APP_ID }}
+                  private-key: ${{ secrets.GH_PRIVATE_KEY }}
 
-          - name: Run Wakatime Leaderboards
-            uses: docker://nicconike/wakatime-leaderboards:master
-            env:
-                GITHUB_TOKEN: ${{ steps.app-token.outputs.token }}
-                GITHUB_REPOSITORY: ${{ github.repository }}
-                INPUT_WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
+            - name: Run Wakatime Leaderboards
+              uses: docker://nicconike/wakatime-leaderboards:master
+              env:
+                  GITHUB_TOKEN: ${{ steps.app-token.outputs.token }}
+                  GITHUB_REPOSITORY: ${{ github.repository }}
+                  INPUT_WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
