--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -12,6 +12,9 @@ on:
             - "pyproject.toml"
             - "Dockerfile"
 
+permissions:
+    contents: read
+
 jobs:
     release:
         if: |
@@ -40,8 +43,8 @@ jobs:
               uses: actions/create-github-app-token@67018539274d69449ef7c02e8e71183d1719ab42 # v2.1.4
               id: app-token
               with:
-                  app-id: ${{ secrets.APP_ID }}
-                  private-key: ${{ secrets.APP_PRIVATE_KEY }}
+                  app-id: ${{ secrets.GH_APP_ID }}
+                  private-key: ${{ secrets.GH_PRIVATE_KEY }}
 
             - name: Checkout Code
               uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5.0.0
