--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -98,7 +98,7 @@ jobs:
         name: Docker
         runs-on: ubuntu-latest
         needs: release
-        if: needs.release.outputs.released == 'true'
+        # if: needs.release.outputs.released == 'true'
         concurrency:
             group: ${{ github.workflow }}-${{ github.ref }}
             cancel-in-progress: ${{ github.ref != 'refs/heads/master' }}
@@ -117,8 +117,8 @@ jobs:
               uses: actions/create-github-app-token@67018539274d69449ef7c02e8e71183d1719ab42 # v2.1.4
               id: app-token
               with:
-                  app-id: ${{ secrets.APP_ID }}
-                  private-key: ${{ secrets.APP_PRIVATE_KEY }}
+                  app-id: ${{ secrets.GH_APP_ID }}
+                  private-key: ${{ secrets.GH_PRIVATE_KEY }}
 
             - name: Checkout Code
               uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5.0.0
@@ -207,7 +207,7 @@ jobs:
     cleanup:
         runs-on: ubuntu-latest
         name: Cleanup
-        needs: [release, docker]
+        needs: docker
         concurrency:
             group: ${{ github.workflow }}-cleanup
             cancel-in-progress: false
