--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -43,8 +43,7 @@ jobs:
                   cache: "pip"
 
             - name: Install Dependencies
-              run: |
-                  pip install -r requirements.txt
+              run: pip install -r requirements.txt
 
             - name: Run tests with coverage
               run: |
