ci: update release workflows; add artifact attestation & SLSA

--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -5,6 +5,7 @@ on:
         branches: [master]
         paths:
             - ".github/workflows/coverage.yml"
+            - "api/*.py"
             - "tests/*.py"
             - "sonar-project.properties"
     pull_request:
