--- a/.github/workflows/wakatime.yml
+++ b/.github/workflows/wakatime.yml
@@ -23,8 +23,13 @@ jobs:
             github.actor != 'protected-auto-commits[bot]'
         runs-on: ubuntu-latest
         steps:
+            - name: Harden the runner
+              uses: step-security/harden-runner@f4a75cfd619ee5ce8d5b864b0d183aff3c69b55a # v2.13.1
+              with:
+                  egress-policy: audit
+
             - name: GitHub App Token
-              uses: actions/create-github-app-token@v2
+              uses: actions/create-github-app-token@67018539274d69449ef7c02e8e71183d1719ab42 # v2.1.4
               id: app-token
               with:
                   app-id: ${{ secrets.GH_APP_ID }}
