--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -48,11 +48,11 @@ jobs:
 
             - name: Run tests with coverage
               run: |
-                  pytest --cov=api --cov-report=xml --cov-report=term-missing \
-                      --junitxml=junit.xml -o junit_family=legacy
+                  pytest --cov=api --cov-report=xml --cov-report=term-missing
               env:
                   INPUT_WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
                   GITHUB_REPOSITORY: ${{ github.repository }}
+                  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
             - name: Upload test results to Codecov
               if: ${{ !cancelled() }}
