--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -85,18 +85,13 @@ jobs:
                   tag: ${{ steps.semantic.outputs.tag }}
 
             - name: Build distribution
+              if: needs.release.outputs.released == 'true'
               run: |
                   pip install build==1.3.0
                   python -m build
 
-            - name: Generate Artifact Attestation
-              uses: actions/attest-build-provenance@977bb373ede98d70efdf65b84cb5f73e068dcc2a # v3.0.0
-              with:
-                  subject-name: waka-leaderboards-python-dist
-                  subject-path: dist/*
-                  push-to-registry: true
-
             - name: Publish to PyPI
+              if: needs.release.outputs.released == 'true'
               uses: pypa/gh-action-pypi-publish@ed0c53931b1dc9bd32cbe73a98c7f6766f8a527e # v1.13.0
               with:
                   packages-dir: dist
@@ -143,7 +138,7 @@ jobs:
               if: github.event_name != 'pull_request'
               uses: sigstore/cosign-installer@d7543c93d881b35a8faa02e8e3605f69b7a1ce62 # v3.10.0
               with:
-                  cosign-release: "v3.0.1"
+                  cosign-release: "v2.6.0"
 
             - name: Setup Docker Buildx
               uses: docker/setup-buildx-action@e468171a9de216ec08956ac3ada2f0791b6bd435 # v3.11.1
