--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -8,6 +8,7 @@ on:
             - "api/*.py"
             - "tests/*.py"
             - "sonar-project.properties"
+            - ".pre-commit-config.yaml"
     pull_request:
         branches: [master]
 
@@ -15,17 +16,43 @@ permissions:
     contents: read
 
 jobs:
-    code-coverage:
+    pre-commit:
         if: |
             github.actor != 'dependabot[bot]' &&
             github.actor != 'github-actions[bot]' &&
             github.actor != 'protected-auto-commits[bot]'
+        name: Pre-commit Checks
+        runs-on: ubuntu-latest
+        concurrency: pre-commit
+        steps:
+            - name: Harden the runner
+              uses: step-security/harden-runner@f4a75cfd619ee5ce8d5b864b0d183aff3c69b55a # v2.13.1
+              with:
+                  egress-policy: audit
+
+            - name: Checkout Code
+              uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5.0.0
+              with:
+                  fetch-depth: 0
+
+            - name: Setup Python
+              uses: actions/setup-python@e797f83bcb11b83ae66e0230d6156d7c80228e7c # v6.0.0
+              with:
+                  python-version: "3.13"
+                  cache: "pip"
+
+            - name: Run pre-commit
+              run: |
+                  pip install pre-commit
+                  pre-commit run --all-files --show-diff-on-failure
+
+    code-coverage:
+        name: Codecov
+        runs-on: ubuntu-latest
+        needs: pre-commit
         permissions:
             contents: read
             pull-requests: write
-        name: Codecov
-        runs-on: ubuntu-latest
-        concurrency: code-coverage
         steps:
             - name: Harden the runner
               uses: step-security/harden-runner@f4a75cfd619ee5ce8d5b864b0d183aff3c69b55a # v2.13.1
