--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -220,7 +220,7 @@ jobs:
             packages: write
         uses: slsa-framework/slsa-github-generator/.github/workflows/generator_container_slsa3.yml@v2.1.0
         with:
-            image: ghcr.io/${{ github.repository_owner }}/${{ github.event.repository.name }}
+            image: ghcr.io/${{ github.repository }}
             digest: ${{ needs.docker.outputs.digest }}
             registry-username: ${{ github.actor }}
         secrets:
