--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -79,19 +79,20 @@ jobs:
                   PYTHON_KEYRING_BACKEND: keyring.backends.null.Keyring
 
             - name: Publish to GitHub Release Assets
+              if: steps.semantic.outputs.released == 'true'
               uses: python-semantic-release/publish-action@ae6462adc12bd3d1738070d784b65b5189b955a9 # v10.4.1
               with:
                   github_token: ${{ steps.app-token.outputs.token }}
                   tag: ${{ steps.semantic.outputs.tag }}
 
             - name: Build distribution
-              if: needs.release.outputs.released == 'true'
+              if: steps.semantic.outputs.released == 'true'
               run: |
                   pip install build==1.3.0
                   python -m build
 
             - name: Publish to PyPI
-              if: needs.release.outputs.released == 'true'
+              if: steps.semantic.outputs.released == 'true'
               uses: pypa/gh-action-pypi-publish@ed0c53931b1dc9bd32cbe73a98c7f6766f8a527e # v1.13.0
               with:
                   packages-dir: dist
