chore: update dependabot schedule to monthly and bump deps

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,7 +3,7 @@ default_language_version:
 
 repos:
     - repo: https://github.com/gitleaks/gitleaks
-      rev: v8.28.0
+      rev: v8.30.0
       hooks:
           - id: gitleaks
     - repo: https://github.com/pre-commit/pre-commit-hooks
@@ -12,11 +12,12 @@ repos:
           - id: detect-private-key
           - id: end-of-file-fixer
           - id: trailing-whitespace
+            exclude: ^assets/.*\.svg$
           - id: check-yaml
           - id: check-toml
           - id: check-merge-conflict
     - repo: https://github.com/pylint-dev/pylint
-      rev: v3.3.9
+      rev: v4.0.4
       hooks:
           - id: pylint
             files: \.py$
@@ -28,7 +29,7 @@ repos:
                 - "--max-args=7"
                 - "--disable=too-many-positional-arguments"
     - repo: https://github.com/python-jsonschema/check-jsonschema
-      rev: 0.34.0
+      rev: 0.35.0
       hooks:
           - id: check-github-workflows
           - id: check-dependabot
@@ -37,7 +38,7 @@ ci:
     autofix_commit_msg: "chore(ci): [pre-commit.ci] autofix"
     autofix_prs: true
     autoupdate_branch: master
-    autoupdate_commit_msg: "[pre-commit.ci] pre-commit autoupdate"
+    autoupdate_commit_msg: "chore(ci): [pre-commit.ci] autoupdate"
     autoupdate_schedule: monthly
     autoupdate_timezone: Asia/Kolkata
     submodules: false
