--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -7,7 +7,7 @@ updates:
     - package-ecosystem: "pip"
       directory: "/"
       schedule:
-          interval: "weekly"
+          interval: "monthly"
       commit-message:
           prefix: "chore"
           include: "scope"
@@ -26,7 +26,7 @@ updates:
     - package-ecosystem: "github-actions"
       directory: "/"
       schedule:
-          interval: "weekly"
+          interval: "monthly"
       commit-message:
           prefix: "ci"
           include: "scope"
@@ -44,7 +44,7 @@ updates:
     - package-ecosystem: "docker"
       directory: "/"
       schedule:
-          interval: "weekly"
+          interval: "monthly"
       commit-message:
           prefix: "build"
           include: "scope"
