--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
-bandit==1.8.6
-pipdeptree==2.28.0
+bandit==1.9.2
+pipdeptree==2.30.0
+pre_commit==4.5.1
 PyGithub==2.8.1
-pylint==3.3.9
+pylint==4.0.4
 pytest-cov==7.0.0
-python-dotenv==1.1.1
-python-semantic-release==10.4.1
+python-dotenv==1.2.1
+python-semantic-release==10.5.3
 twine==6.2.0
