--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,7 +23,7 @@ keywords = [
 ]
 license = "MIT"
 license-files = ["LICENSE"]
-dependencies = ["PyGithub==2.8.1", "python-semantic-release==10.4.1"]
+dependencies = ["PyGithub==2.8.1", "python-semantic-release==10.5.3"]
 classifiers = [
     "Programming Language :: Python",
     "Programming Language :: Python :: 3",
@@ -46,7 +46,13 @@ classifiers = [
 ]
 
 [project.optional-dependencies]
-dev = ["bandit==1.8.6", "pylint==3.3.9", "pipdeptree==2.28.0", "twine==6.2.0"]
+dev = [
+    "bandit==1.9.2",
+    "pylint==4.0.4",
+    "python-dotenv==1.2.1",
+    "pipdeptree==2.30.0",
+    "twine==6.2.0",
+]
 test = ["pytest-cov==7.0.0"]
 
 [project.urls]
